# wiztype

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: poetry_autotag.yml
wiztype/: __init__.py  __main__.py  type_dump.py  type_tree.py
wiztype/memory/: __init__.py  properties.py  types.py
