[tool.poetry]
name = "wiztype"
version = "0.1.6"
description = "A type dumper for wizard101"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/wiztype"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
memobj = ">=0.8.1,<0.10.0"
iced-x86 = "^1.17.0"

[tool.poetry.scripts]
wiztype = "wiztype.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
