[tool.poetry]
name = "wiztype"
version = "0.1.10"
description = "A type dumper for wizard101"
authors = ["StarrFox <starrfox6312@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/StarrFox/wiztype"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.2.1"
memobj = "^0.14.1"
iced-x86 = "^1.21.0"

[tool.poetry.scripts]
wiztype = "wiztype.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
